<?xml version="1.0" encoding="utf-8"?>
<!DOCTYPE resources [
    <!ENTITY nbsp "&#160;"><!-- non-breaking space, U+00A0 -->
    ]>
<resources>
    <string name="app_name">Septic Tank</string>
    <string name="gcp_id" translatable="false">13670608697-m4rufvg05to4rqr5k7mreolq24fdpnlh.apps.googleusercontent.com</string>
    <string name="color_mode">Color mode</string>
    <string name="prev_empty_actions">Previous tank empty actions</string>
    <string name="last_state">Meter states from last tank&nbsp;empty&nbsp;action</string>
    <string name="main_meter">Main water meter</string>
    <string name="garden_meter">Garden water meter</string>
    <string name="current_state">Current meter states</string>
    <string name="output_result">Tank contains</string>
    <string name="empty_tank">Empty the tank</string>
    <string name="empty_tank_question">Is the tank empty now?  Current meter states will be saved as previous states.</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="no_data">&lt;NO DATA&gt;</string>
    <string name="days_passed">Days passed</string>
    <string name="days_left">Days left</string>
    <string name="dd">d</string>
    <string name="hh">h</string>
    <string name="download_data">Download the data</string>
    <string name="download_question">Do you wish to download the data from the server?  This will replace currently shown values.</string>
    <string name="upload_data">Upload the data</string>
    <string name="upload_question">Do you wish to upload the data to the server?  This will replace previous contents.</string>
    <string name="download">Download</string>
    <string name="upload">Upload</string>
    <string name="download_in_progress">Downloading data…</string>
    <string name="upload_in_progress">Uploading data…</string>
    <string name="download_success">Download successful</string>
    <string name="upload_success">Upload successful</string>
    <string name="download_error">Download error</string>
    <string name="upload_error">Upload error</string>
    <string name="log_in">Log In</string>
    <string name="log_out">Log Out</string>
    <string name="enter_email_address">Enter e-mail address</string>
    <string name="email_msg_sent">An e-mail message was sent to the provided address. Please click the link in that e-mail message on this device to continue login process.</string>
    <string name="or">or</string>
    <string name="sign_with_google">Sign in</string>
    <plurals name="days_fmt">
        <item quantity="one">(%1$d day)</item>
        <item quantity="other">(%1$d days)</item>
    </plurals>
</resources>